Updated HoW_Sound on microphones, also minor updates to CV pages  Changes to be committed: 	modified:   CV.HTM 	new file:   HOW_S/MICS/EarthworksM50_FreqResp.png 	new file:   HOW_S/MICS/SennheiserMKH8020_FreqResp.png 	new file:   HOW_S/MICS/ShureSM58_FreqResp.png 	modified:   HOW_S/MICS/mic_types.html 	modified:   ddb_courses.html

--- a/CV.HTM
+++ b/CV.HTM
@@ -712,7 +712,9 @@
         Detection Circuit," <a href=
         "http://www.hpl.hp.com/hpjournal/pdfs/IssuePDFs/1983-08.pdf"
         ><I>Hewlett Packard Journal</I>, August, 
-        1983</a>, p. 23.</P> 
+        1983</a>, p. 23. (Or, <a href=
+		"https://archive.org/details/Hewlett-Packard_Journal_Vol._34_No._8_1983-08_Hewlett-Packard/page/n22/mode/1up"
+		>p. 23 only</a>)</P> 
         
         <P>Reviews of projects I worked on at Hewlett Packard 
         appear in these trade magazines: <BR>
