--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -1174,7 +1174,7 @@ the directionality of omnidirectional (<i>d</i> = 0) and figure-of-eight
 have to be exactly zero (0) or exactly unity (1).  It can be any amount in 
 between those limits. This equation nicely illustrates that omnidirectional
 microphones and figure-of-eight microphones represent two extremes of a continuum.  
-Other patters such as cardioid, and super-cardioid, are achieved with different 
+Other patterns such as cardioid, and super-cardioid, are achieved with different 
 directionality factors, <i>d</i>. <br><br>
 
 <img src="Cardioid_logo.png"><i><b>Cardioid</i></b><br>
@@ -1336,7 +1336,9 @@ that the capsule is a little more open at the back, giving it a directional pick
 pattern that is weighted a little more toward a figure-of-eight pattern than for 
 a cardioid.  This means that sounds arriving from the back side of the 
 microphone at &pm;180&deg; are not completely rejected.  Instead, the angle of 
-complete rejection is reduced from &pm;180&deg; to about &pm;120&deg;.  
+complete rejection is reduced from &pm;180&deg; to about &pm;120&deg;.  (The 
+directionality  factor of a super-cardioid microphone is about <i>d</i>&nbsp;=&nbsp;0.67, 
+or possibly as high as 0.75.)  
 
 <p align="center"><img src="Super_cardioid.png"><br>
 <i>Above:  The ideal super cardioid pattern.  The numbers around the outside of the 
@@ -1414,9 +1416,20 @@ a maximum rejection angle of about 120&deg; <br><br>
    <li>Consider rolling off low frequency sounds, using another mic to pick those up.</li>
 </ul>
 
-The skinny story about shotgun and parabolic microphones is that these are 
-rarely used in house-of-worship applications. (End of skinny story.  Feel free to 
-skip ahead to the next main heading, "<a href="#DS">Directionality Summary</a>.")
+A microphone that includes an interference tube (more on that later) is a shotgun 
+microphone.  A microphone that is aimed into a sound-reflective surface 
+is a parabolic microphone.  The skinny story about shotgun and parabolic microphones 
+is that these are rarely used in house-of-worship applications. (End of skinny story.  
+Feel free to skip ahead to the next main heading, "<a href="#DS">Directionality Summary</a>.")<br><br>
+
+Be aware that for some people, and on some consumer-oriented Web pages, the phrase, 
+"shotgun microphone" is used as a reference to a tubular or pencil-like shape for the 
+microphone overall, not to the directional pattern of pickup.  On these 
+<i>HoW Sound</i> pages (and in the professional literature) the phrase "shotgun 
+microphone" refers to the inclusion of an interference tube at the front of the microphone.  
+Thus, for the purposes of this set of Web pages, not every pencil-shaped or tubular-shaped 
+microphone is a "shotgun" microphone.  Only those that have an interference tube are 
+shotgun microphones.
 
 <p align="center"><img src="Shotgun.png"><br>
 <i>Above:  A typical shotgun or parabolic directional pattern, usually valid only for high 
@@ -1534,7 +1547,7 @@ from the sides is not much of an advantage because they are not really as good a
 rejecting from the sides as you might think.  The distortion given to sounds that leak 
 through from the sides makes these sounds more prominent and obvious than desired.<br><br>
 
-In those rare cases where shotgun microphones are used in house-of-worship applications 
+In those rare cases where shotgun microphones are used in house-of-worship applications, 
 they are usually used in combination with other microphones.  For example, one or two 
 shotgun microphones might be used to pick up congregational singing.  Understanding 
 that the low-frequency sounds from these microphones might be poor-sounding, it is 
@@ -1585,7 +1598,7 @@ these sounds more obvious and objectionable.  <br><br>
 Because a shotgun microphone is highly directional it will be especially sensitive to 
 wind noise.  Usually, a shotgun microphone is placed far from the person speaking so 
 plosives are not a problem, but if outdoors, a good windscreen is needed.  Similarly, 
-the capsule of a parabolic microphone should be well windsreened when used outdoors.<br><br> 
+the capsule of a parabolic microphone should be well windscreened when used outdoors.<br><br> 
 
 <a name="DS"></a>
 <img src="Omni_logo.png"> <img src="Cardioid_logo.png"> <img src="Super_Cardioid_logo.png"> 
@@ -1713,7 +1726,7 @@ it will not sweay opinions about what sounds good.  If people judge the sound to
 likely to sway that opinion. In spite of the generality of quantitative knowledge 
 about a microphone, we find that our choices always come down to qualitative judgements  
 which are validated mostly by the acceptance of others of our choices.  What is important 
-in the end is that the sound is percieved as "good."  <br><br>
+in the end is that the sound is perceived  as "good."  <br><br>
 
 For qualitative discussions about the use of microphones, 
 one needs simply to experience them, even virtually, such as by perusing YouTube for 
@@ -1747,6 +1760,7 @@ Neumann U-87 ($3600).</p><p>
 <ul>
    <li>Frequency response is best expressed as a graph.
    <li>A flat horizontal line from 20 Hz to 20 kHz is the nominal ideal.
+   <li>The nominal ideal is usually compromised to achieve directionality, etc. 
    <li>If not a graph, then a frequency range with a decibel range is OK<br>&nbsp; &nbsp; &nbsp;
            Nominal ideal:  20 Hz&ndash;20 kHz &PlusMinus;0 dB<br>&nbsp; &nbsp; &nbsp;
 		   More typical example: 50 Hz&ndash;12 kHz &PlusMinus;4 dB</li>
@@ -1763,6 +1777,15 @@ most people start losing high-frequency and low-frequency response.  Regardless,
 of a good sound reinforcement system should be to reinforce the full range of frequencies 
 from 20 Hz to 20 kHz.<br><br>
 
+With typical program material (spoken voice, music, but not test tones) a variation in 
+loudness of 3 dB is the smallest variation that will be reliably noticed by most people.  
+With training, smaller variations may be noticeable, but for practical purposes, frequency 
+response variations between two microphones of less than 3 dB are insignificant unless the
+sounds are carefully compared.  Variations between 3 and 6 dB are noticeable, but still not 
+very obvious to most listeners.  Variations of 10 dB or more are usually obnoxious.  However, 
+if the source does not contain frequencies where the variations are the greatest, even 
+20 dB variations in the frequency response can go unnoticed.  <br><br>
+
 Of course no real microphone has a perfectly flat frequency response.  The diaphragm of the capsule 
 of a microphone has mass, damping, and elasticity to some degree so there are always resonances 
 in even the most expensive microphones that cause the frequency response to depart 
@@ -1773,12 +1796,66 @@ purposes, ideal (given professional level equipment).  Thus, in a house-of-worsh
 the choice of microphones is usually the single most influential factor in the overall 
 frequency response.<br><br>  
 
-Suppose a microphone has almost no output below 150 Hz as shown by the frequency response.  
+Suppose a microphone has almost no output below 50 Hz as shown by the frequency response.  
 Then no amount of equalization will be able to accurately create the bass sounds that the 
 microphone did not pick up in the first place.  It is essential that the microphone 
 has a reasonable response at the frequencies that it will need to pick up.  But that said, 
 small frequency response variations can often be practically corrected by using the 
 equalizer of the mixer's channel strip.  <br><br>
+
+Most microphones' frequency responses are optimized for particular purposes.  
+<b>Vocal microphones</b>, for example, typically have a frequency response that avoids any loss 
+of frequencies in the range of 2 kHz to 6 kHz because these frequencies are very important 
+to the understandability and clarity of speech.  Simultaneously, if the microphone is designed 
+to be hand-held, it often rolls down the low frequency response because human voices, even the 
+deepest bass voice, have little content below 80 Hz while the noise of the 
+microphone wire flopping around and fingers moving on the microphone's shell are mostly below 
+80 Hz.  Thus, for clear vocals, a good choice is a microphone that suppress frequencies below 
+80 Hz and enhances the 2 kHz to 6 kHz frequency range by a few decibels.  The Shure SM-58 microphone 
+has been a big success in the marketplace, and it has such a frequency response.  This is 
+strong evidence that this type of frequency response is desirable for vocals.  Even if it is 
+not perfectly flat, it performs well at the frequencies of vocals and rejects handling noise.   
+
+<p align="center"><img src="ShureSM58_FreqResp.png"><br>
+<i>Above:  Frequency response of a typical vocal microphone (Shure SM-58).  Note the 
+approximately 5 dB rise at frequencies from 2 to 6 kHz (2000 to 6000 Hz).  Also note the 
+low-frequency roll-off (below  100 Hz) to suppress handling noise.<br> 
+</i><small>(Graph is from the Shure SM-58 User's Manual.  Fair use.)<br></small>
+<p>
+
+For an <b>instrument microphone</b> the first priority is usually a flat low-frequency response from 
+about 80 Hz down as close to 20 Hz as possible.  Instrument microphones with good 
+low frequency response and a slight emphasis of high frequencies of about +3 dB from about 
+4 kHz and up as high as possible (to perhaps 20 kHz) tend to be popular.  Comparing 
+to a vocal microphone, the low frequency response is flatter and the boost in high frequencies, 
+if any, is less in amplitude and happens at higher frequencies.  
+
+<p align="center"><img src="SennheiserMKH8020_FreqResp.png"><br>
+<i>Above:  Frequency response of a typical instrument microphone (Sennheiser MKH8020).  Note the 
+nearly flat response down past 20 Hz and the slight rise above 4 kHz.  (Everything above 
+20 kHz is inaudible because it is supersonic.)<br> 
+</i><small>(Graph is from the Sennheiser MKH8020 User's Manual.  Fair use.)<br></small>
+<p>
+
+A <b>reference microphone</b> (also known as a measurement microphone) is designed to have as flat of 
+a frequency response as the manufacturer can manage.  Since all other aspects of the microphone 
+may be compromised to achieve this flatness, these are usually not good choices for live sound 
+reinforcement.  Reference microphones tend to be omnidirectional, have a high noise floor, and 
+have a low dynamic range.  However, for classical music recording or other situations when the natural 
+acoustic sound of the environment is what you want to capture, flatness is important.  A typical 
+example of a reference microphone is the Earthworks M50.  
+
+<p align="center"><img src="EarthworksM50_FreqResp.png"><br>
+<i>Above:  Frequency response of a typical reference microphone (Earthworks M50).  Note the 
+ruler-flat response down past 20 Hz and even above 20 kHz.  (Everything above 
+20 kHz is inaudible because it is supersonic.)<br> 
+</i><small>(Graph is from the Earthworks M50 User's Manual.  Fair use.)<br></small>
+<p>
+
+<b>General-purpose studio microphones</b> offer switches and sometimes interchangeable capsules 
+and other accessories to tailor the frequency response to different situations.  The AKG C414XLS, 
+Neumann U87Ai, Shure SM-81, are examples.  Most of these can be configured as vocal or instrument 
+or reference microphones depending on how they are set up.   
 
 
 
