Adding new files to link in slides for EGR 304, S20.  New slides in S20/304/Slides. Also updaded How_S on mics

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -1842,20 +1842,30 @@ a frequency response as the manufacturer can manage.  Since all other aspects of
 may be compromised to achieve this flatness, these are usually not good choices for live sound 
 reinforcement.  Reference microphones tend to be omnidirectional, have a high noise floor, and 
 have a low dynamic range.  However, for classical music recording or other situations when the natural 
-acoustic sound of the environment is what you want to capture, flatness is important.  A typical 
-example of a reference microphone is the Earthworks M50.  
+acoustic sound of the environment is what you want to capture, flatness is important.  Some 
+general-purpose studio microphones work well for recording classical music&mdash;see below.  In 
+addition to quite a flat frequency response you can have a good low noise floor and good 
+dynamic range.  The flat frequency response of a reference microphone is a goal to 
+approach with such general-purpose studio microphones.  A typical example of a reference 
+microphone is the Earthworks M50.  
 
 <p align="center"><img src="EarthworksM50_FreqResp.png"><br>
 <i>Above:  Frequency response of a typical reference microphone (Earthworks M50).  Note the 
-ruler-flat response down past 20 Hz and even above 20 kHz.  (Everything above 
+ruler-flat response down past 20 Hz and even above 20 kHz.  <br>(Everything above 
 20 kHz is inaudible because it is supersonic.)<br> 
 </i><small>(Graph is from the Earthworks M50 User's Manual.  Fair use.)<br></small>
 <p>
 
 <b>General-purpose studio microphones</b> offer switches and sometimes interchangeable capsules 
-and other accessories to tailor the frequency response to different situations.  The AKG C414XLS, 
+and other accessories to tailor the frequency response (and also possibly the directionality) to different situations.  The AKG C414XLS, 
 Neumann U87Ai, Shure SM-81, are examples.  Most of these can be configured as vocal or instrument 
-or reference microphones depending on how they are set up.   
+or reference microphones depending on how they are set up.  Usually these are impractical for 
+live-sound use.  They are mentioned here just to let you know that they exist.  Some consumer-grade  
+microphones have similar switching options to the examples mentioned a few lines above, but the overall quality 
+is not in the same league.  However they are OK for karioke, podcasting and other consumer applications.  
+A popular example of a consumer-grade general-purpose microphone is the Blue Yeti and its many 
+variations.  (The frequency response of any of the Blue Yeti models is nowhere near as flat 
+as professionl microphones can provide.)  
 
 
 
