--- a/S20/304S20.HTM
+++ b/S20/304S20.HTM
@@ -89,9 +89,11 @@ TABLE {
                      >Course Syllabus</A><BR>
 Includes course description, textbook, grade weights, etc. <br></P> 
 
+<P style="text-align: center;"><A HREF = "./304/Slides/304S20DN_local.HTM" target="_top"
+>Slides and videos for each class period</A></P>
 <!-- DE BOER'S PAGE -->
 <P style="text-align: center;"><A HREF = "../index.html" target="_top"
->Professor De Boer's Homepage</A>.</P><br><br><small>
+>Professor De Boer's Homepage</A></P><br><br><small>
 <!-- UNCOMMENT FOR INSTRUCTURE ---------------------------------
                            <p style="text-align: center";><small>
 (The information in this frame is available outside of 
