EGR 304 S20 1/13 video posted 	modified:   S20/304/Slides/304S20DN_local.HTM

--- a/S20/304/Slides/304S20DN_local.HTM
+++ b/S20/304/Slides/304S20DN_local.HTM
@@ -110,7 +110,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       ".\304S20DN_0117.pdf"><!-- -->
       1/17<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment-->&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Introduction to Git, Demonstration of a repository<!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=9imjPaQUumQ">Video</a> Introduction to Git, Demonstration of a repository<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; More on Git, HEAD, branch, other commands<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Parallel Ports, Configuration of, I/O strategies, Arduino code<!--end comment--></td>  
    </TR><!-- Week of 1/20------------------------------------------------------------------ --><TR>
