Updated HoW_S with dynamic range info 	new file:   HOW_S/MICS/DynamicRange.png 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -170,6 +170,22 @@ sometimes in the form of a mesh disk suspended between the vocalist and the micr
 can be used to add additional windscreening if desired.<br><br>  
 
 
+<i>Preamplifier</i><br>
+Some capsules develop such weak signals that a preamplifier must be located within inches,
+sometimes even within millimeters, of the capsule.  Other microphones do not need or 
+contain any preamplifier.  A preamplifier can be smaller than a grain of rice or, especially 
+in older microphones, possibly a little larger than a 12 oz. can of pop.  Microphones that 
+connect via USB always have an electronics package in them to manage the USB connection.  
+This electronics package might be labeled as a preamplifier even though it contains more 
+functionality than that.  <br><br>
+
+<i>Body</i><br>
+
+Also known as the <i>handle</i>, <i>shell</i> or <i>case</i>.  This is the part of the 
+microphone that holds everything together.  If the microphone is handheld, then this is 
+the part that is intended to be held.<br><br>  
+
+
 
 <i>Microphone</i><br>
 
@@ -1712,38 +1728,41 @@ is plentiful.  But here is a recommendation that in some particular circumstance
 XYZZY microphone is recommended as better than the SM-58. <br><br>
 
 To the question of which microphone sounds best for which application 
-there are some quantitatively definable concepts that are highly useful.  Yet there 
-are also sound qualities that are hard to describe.  Although both quantitative and 
-qualitative descriptions of microphones can be helpful, only quantitative descriptions 
-have general usefulness.  Qualitative descriptions are always tied to the particular 
+there are some <b>qua<u>n</u>t</b>itatively definable concepts that are highly useful.  Yet there 
+are also <b>qual</b>itative qualities that are hard to describe.  Although both quantitative and 
+qualitative descriptions of microphones can be helpful, <i>only quantitative descriptions 
+have general usefulness</i>.  Qualitative descriptions are always tied to the particular 
 application's context and the related equipment (mixer, windscreen, musical genre, etc.).  
 Thus, qualitative descriptions have a narrow range of validity, comparing only one 
-situation to a few others&mdash;qualitatively.  (Meaning the reviewer liked one total 
-situation more than another.)  Although specifications of a microphone (quantitative 
-assessments) give important guidance in choosing a microphone for a particular situation, 
-it will not sweay opinions about what sounds good.  If people judge the sound to be inferior 
+situation to a few others&mdash;qualitatively.  Qualitative judgements mean the reviewer liked one total 
+situation more than another.  If people judge the sound to be inferior 
 (a qualitative assessment) no degree of explaining technical specifications is 
 likely to sway that opinion. In spite of the generality of quantitative knowledge 
 about a microphone, we find that our choices always come down to qualitative judgements  
-which are validated mostly by the acceptance of others of our choices.  What is important 
-in the end is that the sound is perceived  as "good."  <br><br>
+which are validated mostly by the acceptance of others of our choices. <br><br> 
 
-For qualitative discussions about the use of microphones, 
-one needs simply to experience them, even virtually, such as by perusing YouTube for 
+What is important 
+in the end is the qualitative judgement of most people that the sound is "good."  
+But what is important in the beginning&mdash;in the design of the live-sound 
+reinforcement&mdash;is quantitative knowledge of what technical specifications are 
+needed to produce good sound.  <br><br>
+
+For qualitative discussions about the use of microphones, one needs simply to 
+experience them in different contexts, even virtually, such as by perusing YouTube for 
 various comparisons and demonstrations of microphones.  Then you need to make your own 
 decisions.  Is, "more air," (or "tight bass" or "liquid midrange" or any similar qualitative 
 description) a good thing or a bad thing for the application you are contemplating?  
-Only a consensus of opinions of people who hear the result can decide because that is 
-a qualitative matter.  What is "air" (or whatever) in the sound of a microphone anyway?  
-These terms seem to mean different things to different people, but the use of such 
-qualitative terms does not invalidate experience and comparisons.<br><br>
+Only a consensus of opinions of people who hear the result can decide.  That is the 
+essense of a qualitative statement.  What is "air" (or whatever) in the sound of a 
+microphone anyway?  These terms seem to mean different things to different people, 
+but the use of such qualitative terms does not invalidate experience and comparisons.<br><br>
 
-To be of any general use, this discussion of "Audio Fidelity" will necessarily have to focus 
+<u>To be of any general use, this discussion of "Audio Fidelity" will necessarily have to focus 
 on quantitative measurements of a microphone's characteristics.  Specifically, frequency response, 
-dynamic range, noise floor, and two types of distortion, harmonic and 
-intermodulation distortion, are discussed here.  The reader will find that understanding 
+dynamic range, and two types of distortion, harmonic and 
+intermodulation distortion.</u>.  The reader will find that understanding 
 these quantitative measures can give generally reliable suggestions on how the 
-microphones will qualitatively (subjectively) sound in various applications.  <br><br>
+microphones will qualitatively perform in various applications.  <br><br>
 
 Before reading much further, you might find it helpful to watch one of the 
 many YouTube videos that have been published that qualitatively compare some 
@@ -1754,7 +1773,8 @@ and a really good (expensive) one.  The title of this video is:
 <a href="https://www.youtube.com/watch?v=XMiuElvxEFw"
 >$22 Microphone Vs. $3600 Microphone</a>.  This video compares four microphones, 
 the Newer NW-800 (~$22), the Shure SM-58 (~$100), the Shure SM-7 (~$400) and the 
-Neumann U-87 ($3600).</p><p>
+Neumann U-87 ($3600).  (You will need good-quality ear-buds or headphones to 
+properly appreciate the video.)</p><p>
 
 <img src="FreqResponse_icon.png"> <i><b> Frequency Response </b></i><br>
 <ul>
@@ -1782,19 +1802,19 @@ loudness of 3 dB is the smallest variation that will be reliably noticed by most
 With training, smaller variations may be noticeable, but for practical purposes, frequency 
 response variations between two microphones of less than 3 dB are insignificant unless the
 sounds are carefully compared.  Variations between 3 and 6 dB are noticeable, but still not 
-very obvious to most listeners.  Variations of 10 dB or more are usually obnoxious.  However, 
+objectionable to some listeners.  Variations of 10 dB or more are usually obnoxious.  However, 
 if the source does not contain frequencies where the variations are the greatest, even 
 20 dB variations in the frequency response can go unnoticed.  <br><br>
 
-Of course no real microphone has a perfectly flat frequency response.  The diaphragm of the capsule 
+Of course, no real microphone has a perfectly flat frequency response.  The diaphragm of the capsule 
 of a microphone has mass, damping, and elasticity to some degree so there are always resonances 
 in even the most expensive microphones that cause the frequency response to depart 
 from the ideal.  (This is also true for the cone of a loudspeaker, the stylus of a phonograph, etc.)  
 On the other hand, modern electronics are easily made to have quite ideal frequency responses.  
-The mixer board and the power amplifier and any electronics like these are, for all practical 
-purposes, ideal (given professional level equipment).  Thus, in a house-of-worship situation 
-the choice of microphones is usually the single most influential factor in the overall 
-frequency response.<br><br>  
+The mixer board and the power amplifier and any electronics like these have, for all practical 
+purposes, ideal frequency responses (given professional level equipment).  Thus, in a 
+house-of-worship situation the choice of microphones is usually the single most influential 
+factor in the overall frequency response of the sound system.<br><br>  
 
 Suppose a microphone has almost no output below 50 Hz as shown by the frequency response.  
 Then no amount of equalization will be able to accurately create the bass sounds that the 
@@ -1809,7 +1829,7 @@ of frequencies in the range of 2 kHz to 6 kHz because these frequencies are very
 to the understandability and clarity of speech.  Simultaneously, if the microphone is designed 
 to be hand-held, it often rolls down the low frequency response because human voices, even the 
 deepest bass voice, have little content below 80 Hz while the noise of the 
-microphone wire flopping around and fingers moving on the microphone's shell are mostly below 
+microphone wire flopping around and fingers moving on the microphone's body are mostly below 
 80 Hz.  Thus, for clear vocals, a good choice is a microphone that suppress frequencies below 
 80 Hz and enhances the 2 kHz to 6 kHz frequency range by a few decibels.  The Shure SM-58 microphone 
 has been a big success in the marketplace, and it has such a frequency response.  This is 
@@ -1819,7 +1839,7 @@ not perfectly flat, it performs well at the frequencies of vocals and rejects ha
 <p align="center"><img src="ShureSM58_FreqResp.png"><br>
 <i>Above:  Frequency response of a typical vocal microphone (Shure SM-58).  Note the 
 approximately 5 dB rise at frequencies from 2 to 6 kHz (2000 to 6000 Hz).  Also note the 
-low-frequency roll-off (below  100 Hz) to suppress handling noise.<br> 
+low-frequency roll-off (below 100 Hz) to suppress handling noise.<br> 
 </i><small>(Graph is from the Shure SM-58 User's Manual.  Fair use.)<br></small>
 <p>
 
@@ -1841,13 +1861,10 @@ A <b>reference microphone</b> (also known as a measurement microphone) is design
 a frequency response as the manufacturer can manage.  Since all other aspects of the microphone 
 may be compromised to achieve this flatness, these are usually not good choices for live sound 
 reinforcement.  Reference microphones tend to be omnidirectional, have a high noise floor, and 
-have a low dynamic range.  However, for classical music recording or other situations when the natural 
-acoustic sound of the environment is what you want to capture, flatness is important.  Some 
-general-purpose studio microphones work well for recording classical music&mdash;see below.  In 
-addition to quite a flat frequency response you can have a good low noise floor and good 
-dynamic range.  The flat frequency response of a reference microphone is a goal to 
-approach with such general-purpose studio microphones.  A typical example of a reference 
-microphone is the Earthworks M50.  
+have a low dynamic range.  The intended application of a reference microphone is for spectrum 
+analysis and setup of room equalization and similar technical purposes.  Other than that there 
+are almost always better choices of microphones for live-sound applications in houses-of-worship.  
+A typical example of a reference microphone is the Earthworks M50.  
 
 <p align="center"><img src="EarthworksM50_FreqResp.png"><br>
 <i>Above:  Frequency response of a typical reference microphone (Earthworks M50).  Note the 
@@ -1857,32 +1874,99 @@ ruler-flat response down past 20 Hz and even above 20 kHz.  <br>(Everything abov
 <p>
 
 <b>General-purpose studio microphones</b> offer switches and sometimes interchangeable capsules 
-and other accessories to tailor the frequency response (and also possibly the directionality) to different situations.  The AKG C414XLS, 
-Neumann U87Ai, Shure SM-81, are examples.  Most of these can be configured as vocal or instrument 
-or reference microphones depending on how they are set up.  Usually these are impractical for 
-live-sound use.  They are mentioned here just to let you know that they exist.  Some consumer-grade  
-microphones have similar switching options to the examples mentioned a few lines above, but the overall quality 
-is not in the same league.  However they are OK for karioke, podcasting and other consumer applications.  
-A popular example of a consumer-grade general-purpose microphone is the Blue Yeti and its many 
-variations.  (The frequency response of any of the Blue Yeti models is nowhere near as flat 
-as professionl microphones can provide.)  
+and other accessories to tailor the frequency response and/or the directionality to 
+different situations.  The AKG C414XLS, Neumann U87Ai, and Shure SM-81, are examples.  Most of these 
+can be configured as vocal or instrument or reference microphones depending on how they are set up.  
+Many of these types of microphones are impractical for live-sound use, mainly due to the complexity
+of setting them up advantageously for various situations.  On the other hand, if you set up such 
+a microphone more-or-less permanently for a dedicated purpose, they might be useful.  An example 
+would be a stereo pair used to mic a grand piano and always used in the same setup and positions.  
+In a situation like that the sound operators do not need to spend time at each event considering 
+the switch settings on the microphones and carefully searching for the best positions for them for 
+each event.  The technique can be the same at each event.  <br><br>
 
+General-purpose studio microphones are mentioned here just to let you know that they exist and 
+in case there is a particular application you have for them, but usually other microphones are 
+going to routinely be more cost effective.  <br><br>
 
+Some consumer-grade microphones have similar switching options to general-purpose studio 
+microphones, but the overall quality is not in the same league.  Their lower cost makes them 
+popular for karaoke, podcasting, teleconferencing, and similar applications.  A popular example of a 
+consumer-grade general-purpose microphone is the Blue Yeti and its many variations.  
+(The frequency response of any of the Blue Yeti models is nowhere near as flat as professional 
+microphones can provide.)  Usually, consumer-grade microphones are not good choices for live-sound 
+house-of-worship applications even though they are great choices for their target applications.<br><br><br>  
 
+<img src="DynamicRange.png"><i> <b>Dynamic Range</b></i><br>
+<ul>
+   <li>For every mic there is a maximum sound-pressure level (in dB-SPL) that it can <br>&nbsp; &nbsp; &nbsp;
+           accept without undue distortion. <br>
+   <li>Every microphone generates slight self-noise.  In the microphone's output, <br>&nbsp; &nbsp; &nbsp;
+           self-noise sounds as if it is real noise, very soft, at a low sound-pressure <br>&nbsp; &nbsp; &nbsp;
+		   level.
+   <li>The difference between the maximum acceptable SPL and the equivalent SPL of <br>&nbsp; &nbsp; &nbsp;
+           the self noise is the microphone's <i>dynamic range.</i>  
+   <li>Sounds to be picked up by the microphone must have a loudness that fits well<br>&nbsp; &nbsp; &nbsp;
+           in the microphone's dynamic range.  
+</ul><p>
 
+Recall that about 191 dB-SPL is the highest sound pressure level that is possible in a normal atmosphere 
+and that 120 db-SPL is the threshold of pain (borderline discomfort).  A microphone placed inside a kick 
+drum might experience 150 dB-SPL.  A microphone held up close to the lips of a person shouting as loud as 
+possible might experience 130 dB-SPL.  It is important that the microphone you choose can handle the loudest 
+sounds.  Most microphones have a maximum loudness limit that increases as frequency increases.  Thus, a kick 
+drum (lots of low frequency content) is a challenge for a microphone with a limited maximum SPL, but 
+most other types of sources have such little low-frequency content that they are handled easily.<br><br>
 
+Some older (pre-1970's) models of condenser microphones had relatively low maximum SPL capabilities. 
+Because of this, condenser microphones have developed a reputation of being unsuitable for loud sound 
+sources such as drums and trumpets and even a loud vocalist.  But this reputation is outdated now.  
+Most modern condenser microphones, some very inexpensive ones excepted, have maximum SPL capabilities 
+similar to popular dynamic microphones such as the Shure SM-58.  Consequently maximum SPL capability 
+is usually only an issue for drums and possibly trumpets, and then only if the microphone is very 
+close to the instrument.  For house-of-worship applications a maximum SPL capability of 125 dB or 
+more should be enough, except for close-miking of drums when 140 dB-SPL or more would be better.<br><br>
 
+On the soft side of the dynamic range issue, every microphone generates some slight amount of self-noise.  
+This self noise is created by the thermal motion of atoms of the atmosphere bouncing off the diaphragm.  
+In addition, any preamplifier in the microphone will generate more self-noise due to thermal motion 
+of electrons and other causes in the electronics.  You can notice self-noise if you place the microphone 
+in a quiet place (e.g. muffled tightly between pillows in a quiet room) and then, using headphones and 
+with all loudspeakers turned off (so there can be no feedback) turn up the volume really high.  You will 
+hear a hissing sound.  Some of this hiss is from the microphone itself.  (Some more of it may be from the 
+console you are using.)  If the sound you are attempting to pick up with the microphone is not 
+loud enough, it cannot overcome the self-noise of the microphone.  Then, when the sound is soft you 
+will hear the hiss of the self-noise in the background.  As you can imagine, the need to pick 
+up such soft sounds is rarely a problem in a house-of-worship situation.  If you do think you are 
+having a problem with a microphone's self-noise, be sure the gain trim on that channel and perhaps 
+on other channels and group mixes too.  Gain structure errors can also produce hiss.  <br><br>  
 
+Because self-noise is usually not an issue with a dynamic microphone, most specification sheets for 
+dynamic microphones don't mention anything about it.  Better condenser microphones will include self-noise
+on their specification sheets.  For house-of-worship applications anything below about 25 dB-A is good 
+enough.  (Or anything below about 37 dB-CCIT.)<br><br>
 
+The DPA Microphone company has a good summary video: "<a href =
+"https://www.youtube.com/watch?v=-lBOeQCUilw">Understanding dynamic range and the sound pressure level 
+of the voice</a>."  Their video puts emphasis on the maximum SPL issue.  Lewitt company also has a good 
+video on this topic, this time with the emphasis on the self-noise issue.  "<a href=
+"https://www.youtube.com/watch?v=WjnE3DRR5PM">Learn WHY Microphone Self-Noise matters</a>."<br><br><br>
 
+<img src="Audio_Distortion.png"><i><b>Distortion</b></i><br>
+<ul>
+   <li>One measure of audio fidelity is <i>total harmonic distortion</i> or <i>THD</i> <br>&nbsp; &nbsp; &nbsp;
+          (lower is better, less than 1% is excellent) 
+   <li>[Something more to go here eventually]
+</ul><p>
+
+[Something more to go here eventually]
 
 <h1>To be continued. . .</h1><p>
 
+
 Planned for the future on this page:<br>
 <br>
-3.) Audio Fidelity<br><br>
-
--Capsule technologies<br><br>
+--Capsule technologies<br><br>
 
 Planned for the future on another page:<br>
 -Techniques for using microphones<br><br></p>
